# ChangeLog for app-emulation/spice-vdagent
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-vdagent/ChangeLog,v 1.12 2014/08/06 06:44:37 patrick Exp $

  06 Aug 2014; Patrick Lauer <patrick@gentoo.org> spice-vdagent-0.10.1.ebuild,
  spice-vdagent-0.12.0.ebuild, spice-vdagent-0.8.1-r1.ebuild:
  Make description more repoman-happy

  18 May 2014; Sven Vermeulen <swift@gentoo.org> spice-vdagent-0.10.1.ebuild,
  spice-vdagent-0.12.0.ebuild, spice-vdagent-0.8.1-r1.ebuild:
  Fix bug #441908 - Add USE=selinux dependency to selinux-vdagent

*spice-vdagent-0.12.0 (04 Oct 2012)

  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +spice-vdagent-0.12.0.ebuild:
  Version bump

  04 Oct 2012; Doug Goldstein <cardoe@gentoo.org> spice-vdagent-0.10.1.ebuild:
  Fix up to use console-kit correctly. bug #431890

  21 Aug 2012; Doug Goldstein <cardoe@gentoo.org> spice-vdagent-0.10.1.ebuild:
  Add missing depends. bug #431964

  19 Aug 2012; Johannes Huber <johu@gentoo.org> spice-vdagent-0.10.1.ebuild:
  Add ~x86 wrt bug #431854.

*spice-vdagent-0.10.1 (07 Jul 2012)

  07 Jul 2012; Doug Goldstein <cardoe@gentoo.org> -spice-vdagent-0.8.0.ebuild,
  -spice-vdagent-0.8.1.ebuild, +spice-vdagent-0.10.1.ebuild,
  +files/spice-vdagent.confd-2, +files/spice-vdagent.initd-2:
  Version bump. Check for CONFIG_VIRTIO_CONSOLE since its necessary. Check if
  we should use /dev/uinput or /dev/input/uinput on startup. bug #378833

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> spice-vdagent-0.8.0.ebuild,
  spice-vdagent-0.8.1.ebuild, spice-vdagent-0.8.1-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  05 Nov 2011; Robin H. Johnson <robbat2@gentoo.org>
  spice-vdagent-0.8.0.ebuild, spice-vdagent-0.8.1.ebuild,
  spice-vdagent-0.8.1-r1.ebuild:
  Fix CONFIG_CHECK usage to be non-fatal, this package does not build kernel
  modules. Verified good build with no kernel sources or kernel config
  available.
