@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX spice-vdagent.confd 169 SHA256 089e0bc85f7d3bc6bbcbbb02aaf0c47a2053fe1867dba9d78a195eb775467dc2 SHA512 bdd1d2bea8a268fde44dfc708be699de9ae37803ed7b79a84e998f175d809f37bcf0623fb222fdb5505d3b3b549af0734a8962b48bec635a1089369eb043af42 WHIRLPOOL 82b32cae521811d71f9c991e0cf66784f503126fe9a9333e0466c5217959ddb9dbd51d18bede298da69c673105e762b46a944052c2563862b66ad02197c5a79c
 AUX spice-vdagent.confd-2 314 SHA256 50dc90de28c68dc95000b88c9e00d01dc9d3fc338c93dc9540e0b01d40b90ae6 SHA512 ef3e02c65dd83ed0d4b1eaad9c6000a9d5d53fbbf2c19fe9604583f85478c92276b3b80554bd1573af6866e242c484f02da5c3500c0b4c430d3af0de755eed38 WHIRLPOOL f19f18e5f63471c3d34a79a66cef76405a5ee6ef66845e61367f31ba1399c71e620d071f98dd0b249572adf4caa9195303fca8ac8cd6450cf263fed203a817c8
 AUX spice-vdagent.initd 1322 SHA256 1415b76c8917930cd9acbbfb40cdf513314ec399aa7139ad478786111749a66e SHA512 0d48707dd3ca19a5c44a451b6a03475dd9a6ba5c2f3272ed822a56d29fafd2f816a6fcf43ca0d61df77365e52c240770c11405fcd9829845c03d62f309be25c2 WHIRLPOOL a1bdf466c8da94938d7eb0cf046135f7d8fa9aa48a62b2dff2121219c8f4f7559d07bd607b99af5a63c65012ea3adceeb09f978c303d95f7c14214288455b252
@@ -5,8 +8,25 @@ AUX spice-vdagent.initd-2 1612 SHA256 4e6e844ec6dbcb7a6616ccc9bdf331497a8deb0cd3
 DIST spice-vdagent-0.10.1.tar.bz2 107250 SHA256 cea0db6f2def79a96876d0921f2a6234875797c68a8143d24cf9af8cc01361db SHA512 b7a42af7fd1d15dcfd618be34b99c73fa2d07105e37236a5a8c2a0b70d7d112de9e99200257ae746f60de583735681ce7c1437445921f6b8a877c7a9b2083afe WHIRLPOOL 83f3f6b2501966a0a5b053547759fd8a131d3e6a795f008c21f0a11794fd6ae7e30800328189e4dead11c19ae2a0a08a35ff192011622ca2fa8eac204711d035
 DIST spice-vdagent-0.12.0.tar.bz2 114252 SHA256 e0bee1985c2c31ccc44043ed6735304078e09e14c4f805962cf8c288fa205659 SHA512 42c98a3cc3167884203d4d0a31562668be3df10c89eca2a9257c6de1f787b7db77f0648013f307554eb09c0bf3f0cddc8632f050c4018aef544b9c22a02b2dfe WHIRLPOOL 3e00f0ac9ca66a2c6fec4307d4b6eea51fc4a266e72e6d5764e8f3fb01ab407440cabe20ee1db4d9703e5bda5d66616f71a8baa1d8d6610b0e1c75a67b3affae
 DIST spice-vdagent-0.8.1.tar.bz2 98437 SHA256 99ec232805a6201da78d409e6f874ff0aa6bb25e7ffe623aa77752539ae7d7ff SHA512 45c2b94dc66dd2061b57cfe90d7b900fd095fa067c6bca560ecc300979953e8c37b63e8cbdb4683275a1cc084512aa97e1125bbb17e39a6966387e4f1be2c178 WHIRLPOOL 1cfeabc97f4c1fd9e42a9ad849916f04d9f4f640a586158c3d8b2ab3b9449f6e1cf8acba196a9e684a1499404747971fa82ad922bd50e87c257526d67468a85f
-EBUILD spice-vdagent-0.10.1.ebuild 1317 SHA256 9841e4a5ac904b5c568774f7d3be61c624b6baa91f3ef0eca4ef746b391e9e6d SHA512 29e364aac705f1838472a8fae64cbacd979e97fa1d9586ccabb0598e71ccec8c349dbcc529c876fa6c83dbd41085410172c99816965dfc5449d211ba99917cb3 WHIRLPOOL 826428135ee3cbface4a24c6c5b7025932e4753e426537c54cf732e896d61af1b5b0eac7278111b7a887b46cd6f7ef56c5f70663a6c9e88e658991a43398cd32
-EBUILD spice-vdagent-0.12.0.ebuild 1317 SHA256 fe163d73ddf3c577c5a35addf0cde14f42d78f9ac7eb8fe7442473171fb368e9 SHA512 dfdd628ba6711801edf60151b160564c5cdd6cbddaf82e34f66635f39af9bb3123551c0d743cf58bc3ec6ed501ac2f81871bfe4fe205264e7bddba9bafbfb14f WHIRLPOOL 59da0dac86029569c450bbee11428a0bb0ef989d54cf97194f5213a68e403640022ca33db68f764a5a7775384939c39cb2f6120904f71c3126f1444ec3b6beea
-EBUILD spice-vdagent-0.8.1-r1.ebuild 1325 SHA256 ee3139640ba0d854a24255479ba00485fa43a06622cad629623a2a2c4a41c14d SHA512 6efd2e6295ed0315c874418e100df8afa47121d14700a21f87bbebdfb0770dbd06e8eebc00f9ce4172c266519928d5709f0b2cbad172615d4306dd0107c8a80e WHIRLPOOL 31338fe93c59cee4d7030fe3a34db365d4df29dae60f097e87c725fed534bc6477d0a841e7fd70f5e57f6502cab1330c30500c8bedd9047f4fc8b4ce03bac3a0
-MISC ChangeLog 2594 SHA256 ac21da451797afa5a20a4ef88414f851f69ace3f4cab3b6c91b52deae0f09fff SHA512 046a7517374654f9ec35435a082dd33e6948491396913c8e99668009b2480346a531d37c7ed8dd4054558c34cb26eef3cc0cafb95142c12d0caea8d9707d57e8 WHIRLPOOL 78e723a5c28a1a102850075617aa012d6eb81446572d6470744591b79c6129f3336b0d64fc8b5fc42ba77e9b775ba4d881eedcc124f93448ca0aeb92de8924cf
+EBUILD spice-vdagent-0.10.1.ebuild 1336 SHA256 464e58ca71316907101568a27192850821f1f87598503ab972ffff4791fde20f SHA512 36f022189e293ee3f63b69b2bb49ef83ffe42c5c4630bd688a8f771e2f99f124a521a08b01c7af05176c9f580281cf7e1fffe1bdbdb01375c442fa015dabdc0e WHIRLPOOL 7f71558830f42c0d550d27bb148245ed318b3f38b2229e137f927b770bf96362923e5d9d97fac2810bfccf23116ca1da2b8925bb8ddacfe7eb1ad0e6a8318278
+EBUILD spice-vdagent-0.12.0.ebuild 1336 SHA256 e3f31cf202a83709c9d00a6ed04e6821f0597c4a9a56d04831c8cdaff33af262 SHA512 f83283bfa187bc747e323cfcaf31ec02bb7d39ed3fa6e5acc0302db34e06e23ed14eed3a6a48be95336ff697cb98d300619df37895543ae4002f27c30f2b666f WHIRLPOOL 6070721352520c4cd885fc416534407b327030f75ec6d54c09875b48dcf97c206e83d9343a98ba6afcfb6ea887aa0ee7895662284d62f21489e99dd13f39f2ab
+EBUILD spice-vdagent-0.8.1-r1.ebuild 1344 SHA256 f30eb724bc7683d22a37f3a2e9cecd2e6e4347d18e1e582b7159cdc7d671f27f SHA512 78ad0fcdb73937ae5c8042c1e347ab2db146bc0c7f93e61b689f78b21350c2bc066ac3a81f64585b0055d361bca599378cecf1ad6bbe900dafc07f153357127c WHIRLPOOL 4ee015448e7758949bd098874bd4342568ecf4580a928ab9d67fa495ee30bf69d4dc3be6d9f6286854cb91591f05a75bfed0f0796b7989fd7a1823ceb9503ce9
+MISC ChangeLog 2822 SHA256 5e55c7a39724d6b9e54e76f7a47f811ac1fa4770771e00aa8777ea5687fae423 SHA512 cff2bed019c84260699f8365856391b26040f1d210512df974b6c9000966e4da3d32e814f2881d9fba72d6cf9128d9b528eb025d6838c730abcfe9a6f5e85c42 WHIRLPOOL 5ec239ba0f68740641e4bf1f17d4dd2ea29d21bda01aecea1bfac58171ff9d20fe3c7fcb8f110bb1f2cc66bdb20e0f46ca9efd12b2daf5004586a001f79947f5
 MISC metadata.xml 446 SHA256 20918dcf1516bbd1840cfc825dc2b402643bd6c39f0a6423f6839884e07e03a5 SHA512 d06340e19f72b91c4ff4cc6bc71557a4ea040a41b8b6a3c5bcbb2d36284d9420a5296d19a90687e258e3f83ba62663c460d6785de47ea03804a3c77cb21bb93a WHIRLPOOL e5058f9fe5cb3340b98707ee79aba0a27c98a2cce1120ae008dfd7e35a725bd43d71345730c7c1dd9f2969c051f1def5de0c8c09d4679874149965a5de85fdc3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQIcBAEBCAAGBQJUVeTMAAoJEC7dUkA7aK9H2EsP/1n6O241BFl8CYkNZzEzCkaO
+ytbglXcIzA22bBCyGm0qhN2pfdzxobfV1YXLyMadf2kMnW/p1lozlmD/m/2fSmRc
+q6Lac8KyUzxDTcp//dIfZThgypBn85dVsxMX4mHOZyOCMXnQK9mzuLRQi0d2a0U4
+o8zliwJ3rzQIeIhLqL7rWbjkT4ZV+kso62WKDXbPXBZ2alKyplaooC6mUfFuLXo5
+scmdqTioDowqTBcjdRcrLibV290S+pxd8jnS46g+ekwFYdubDWHbXjgeQgg3fVXV
+mtIU7zOGiQ/n42+Nhm4D4eg8ZwVfOwuJLyjl3N3d4L2eCHOm26QbnQ7vY9QfXIio
+hqQLK8RIFl3X77Q6KRESA4DKwPd2/TR/lXTnLRYi5lneHZFPM5f0dV3BOy7Q7iNs
+h3rwZx25DeWYzkZidsaDVJpdO2vbf1bRTa97lnnT/g3tRzKRJM4+Q9jgYbyUCUAG
+Byog/o8QWK4V/349UGpL1Xs7zR1GGIUARmn7TtQ8sBTSEI9kDZDIlXv4CBdSn6Nt
+YOFTzrvQHVMUuNrmtA7ugqQeYMxK6mm5Ut8zJ71izgUneMFz55WrZaOlwq5SIlOR
+VqgRKhvzXc5Z+HI7gP4EeCPE/LH4qfYh7i7f82/UM9MtMo+yBjr4qgxulmDOzKEu
+iChXyVK9THrryNDcR+OP
+=wtsg
+-----END PGP SIGNATURE-----
