@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-vdagent/spice-vdagent-0.8.1-r1.ebuild,v 1.5 2014/08/06 06:44:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-vdagent/spice-vdagent-0.8.1-r1.ebuild,v 1.6 2014/11/02 08:03:31 swift Exp $
 
 EAPI=4
 
@@ -15,14 +15,15 @@ SLOT="0"
 KEYWORDS="~amd64"
 IUSE="+consolekit selinux"
 
-RDEPEND="x11-libs/libXfixes
+CDEPEND="x11-libs/libXfixes
 	x11-libs/libXrandr
 	x11-libs/libX11
 	>=app-emulation/spice-protocol-0.8.1
-	consolekit? ( sys-auth/consolekit sys-apps/dbus )
-	selinux? ( sec-policy/selinux-vdagent )"
+	consolekit? ( sys-auth/consolekit sys-apps/dbus )"
 DEPEND="virtual/pkgconfig
-	${RDEPEND}"
+	${CDEPEND}"
+RDEPEND="${CDEPEND}
+	selinux? ( sec-policy/selinux-vdagent )"
 
 CONFIG_CHECK="~INPUT_UINPUT"
 ERROR_INPUT_UINPUT="User level driver support is required to run the spice-vdagent daemon"
