@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/spice-vdagent
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-vdagent/ChangeLog,v 1.12 2014/08/06 06:44:37 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/spice-vdagent/ChangeLog,v 1.13 2014/11/02 08:03:31 swift Exp $
+
+  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> spice-vdagent-0.10.1.ebuild,
+  spice-vdagent-0.12.0.ebuild, spice-vdagent-0.8.1-r1.ebuild:
+  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
+  #527698)
 
   06 Aug 2014; Patrick Lauer <patrick@gentoo.org> spice-vdagent-0.10.1.ebuild,
   spice-vdagent-0.12.0.ebuild, spice-vdagent-0.8.1-r1.ebuild:
